; ModuleID = '/home/carl/AnghaBench/torch7/extr_MemoryFile.c_torch_longSize.c'
source_filename = "/home/carl/AnghaBench/torch7/extr_MemoryFile.c_torch_longSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"torch.MemoryFile\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @torch_longSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @torch_longSize(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @luaT_checkudata(i32* %4, i32 1, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @lua_tointeger(i32* %7, i32 2)
  %9 = call i32 @THMemoryFile_longSize(i32* %6, i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @lua_settop(i32* %10, i32 1)
  ret i32 1
}

declare dso_local i32* @luaT_checkudata(i32*, i32, i8*) #1

declare dso_local i32 @THMemoryFile_longSize(i32*, i32) #1

declare dso_local i32 @lua_tointeger(i32*, i32) #1

declare dso_local i32 @lua_settop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
